# suxserv

./: .cvsignore  AUTHORS  COPYING  ChangeLog  DESIGN  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  conf.c  config.h.in  configure  configure.in  dbuf.c  dbuf.h  dispatch.c  h.h  main.c  main.h  match.c  match.h  memory.c  memory.h  network.c  network.h  netxplode-persist.sh  netxplode.pl  numeric.h  os.h  parse.c  parse.gperf  parse.h  s_err.c  sux.h  table.c  table.h  usertable.c  (+1 more)
doc/: sux.conf
include/: .cvsignore  h.h  log.h  main.h  match.h  memory.h  network.h  numeric.h  os.h  parse.h  sux.h  table.h  threads.h
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  conf.c  dispatch.c  log.c  main.c  match.c  memory.c  network.c  parse.gperf  s_err.c  sux.c  table.c  threads.c  usertable.c
tools/: netxplode-persist.sh  netxplode.pl
