
SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in \
    aclocal.m4 \
    config.guess \
    config.h.in \
    config.sub \
    configure \
    depcomp \
    install-sh \
    ltmain.sh \
    missing \
    mkinstalldirs

moo:
	@echo "         (__) "
	@echo "         (oo) "
	@echo "   /------\/ "
	@echo "  / |    ||   "
	@echo " *  /\---/\ "
	@echo "    ~~   ~~   "
	@echo "....'Have you mooed today?'..."
